--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Hi. My name is Inf4mous Ki!!er</title>
 </head>
 <body>
-<h1>Heyoo. Sup!!! I am Rahul</h1>
+<h1>Heyoo. Sup!!! I am Rahul.</h1>
 </body>
 </html>
